--- a/imagens/estilos/home.html
+++ b/imagens/estilos/home.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="estilos/hometela.css" media="all">
+    <link rel="stylesheet" href="estilos/homepaisagem.css" media="screen and (orientation:landscape)">
+    <link rel="stylesheet" href="estilos/homeretrato.css" media="screem and (orientation:portrait)">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Restaurante Saborita</title>
 </head>
